# candle-gqa

./: Cargo.toml
candle-gqa-kernels/: Cargo.toml
candle-gqa-kernels/src/: binary.cu
candle-gqa-ops/: Cargo.toml
candle-gqa-ops/lib/: ops.rs
candle-gqa-ops/src/: main.rs  ops.rs
