[package]
name = "candle-gqa-ops"
version.workspace = true
edition = "2021"

[lib]
name = "candle_gqa_ops"
path = "lib/lib.rs"

[dependencies]
candle-core = { version = "0.7.2", package = "candle-core", features = [
    "cuda",
] }
candle-gqa-kernels = { path = "../candle-gqa-kernels" }

[features]
# cuda = ["candle-core/cuda", "dep:candle-gqa-kernels"]
# metal = ["candle-core/metal"]
